--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Document</title>
 </head>
 
-    <style href="miEstilo.css">
+    <style href="miEstilo.css"/>
 <body>
     <h1>Aquí iría el título de la página</h1>
     <p>Esto es un párrafo</p>
     <p>Esto es un segundo párrafo</p>
+    <p>Esto es un tercer párrafo</p>
 </body>
 </html>
