--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Aquí iría el título de la página</h1>
     <p>Esto es un párrafo</p>
     <p>Esto es un segundo párrafo</p>
-    <p>Esto es un tercer párrafo</p>
+    <p>Esto es un tercer párrafo con variación</p>
     <p>Esto es un cuarto párrafo</p>
 </body>
 </html>
